tests/ui/parser/macro/trait-object-macro-matcher.stderr
error: lifetime in trait object type must be followed by `+`
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^

error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0224`.
